[package]
name = "duration-breakdown"
version = "0.2.0"
authors = ["Thomas Castleman <thomascastleman0@gmail.com>"]
edition = "2018"
license = "MIT"

readme = "README.md"
description = "Breakdowns of time durations into their constituent parts"
repository = "https://github.com/thomascastleman/duration-breakdown.git"

keywords = ["time","duration"]

[dependencies]

[dev-dependencies]
quickcheck = "1.0.3"